# ModelRouter

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivyignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
api/: __init__.py  config.py  main.py  metrics.py  orchestrator.py  router.py  schemas.py  utils.py
api/controllers/: __init__.py  chat.py
api/infra/: __init__.py  http_client.py  redis_client.py
api/providers/: __init__.py  base.py  groq_adapter.py  ollama_adapter.py  openai_adapter.py  openrouter_adapter.py
docs/: architecture.md  configuration.md  development.md  examples.md  observability.md  security.md
docs/ES/: README.md
scripts/: client_fetch.py  client_stream.py  test.py
tests/: __init__.py  test_adapters.py  test_controllers_chat.py  test_endpoints.py  test_infra_http_client.py  test_infra_redis_client.py  test_main.py  test_orchestrator.py  test_providers_base.py  test_providers_ollama_adapter.py  test_providers_openai_adapter.py  test_providers_openrouter_adapter.py  test_router.py  test_router_extra.py  test_utils.py
ui/: astro.config.mjs  package.json  tsconfig.json
ui/src/components/: ApiHealth.astro
ui/src/components/sidebar/: Sidebar.astro  SidebarFooter.astro  SidebarItem.astro
ui/src/components/stats/: StatCard.astro  StatsBar.astro
ui/src/components/ui/: Button.astro
ui/src/components/utils/: Button.astro
ui/src/layouts/: MainLayout.astro
ui/src/pages/: index.astro  metrics.astro
ui/src/styles/: global.css
