[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelrouter"
version = "0.1.0"
description = "API asíncrona para orquestación multi-proveedor de LLM con streaming y fallback automático."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "HC-ONLINE" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "httpx==0.26.0",
    "redis==5.0.1",
    "hiredis==2.3.2",
    "prometheus-client==0.19.0",
    "python-json-logger==2.0.7",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "flake8==7.1.1",
    "pre-commit==4.0.1",
    "mypy==1.13.0",
    "types-redis==4.6.0.20240425",
    "types-requests==2.31.0.20240125",
    "typing-extensions==4.12.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "api.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "redis.*",
    "prometheus_client.*",
    "pythonjsonlogger.*",
    "uvicorn.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["api"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
